Strags/.xmonad/xmonad.errors

xmonad.hs:259:1: error:
    Multiple declarations of ‘myStartupHook’
    Declared at: xmonad.hs:258:1
                 xmonad.hs:259:1
    |
259 | myStartupHook = do
    | ^^^^^^^^^^^^^

xmonad.hs:286:1: error:
    Multiple declarations of ‘myLogHook’
    Declared at: xmonad.hs:248:1
                 xmonad.hs:286:1
    |
286 | myLogHook dbus = def { ppOutput = dbusOutput dbus }
    | ^^^^^^^^^
